# fps_engine

./: .gitignore  Cargo.toml  README.md  build.rs  hex_to_srgb.py  level_editor.py
src/: camera.rs  hud.wgsl  level.rs  lib.rs  main.rs  model.rs  resources.rs  room.rs  shader.wgsl  state.rs  texture.rs  wall.rs
