[package]
name = "fps_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.12", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
wgpu = "0.18.0"
winit = "0.28"
