[package]
name = "fps_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.12", features = ["derive"] }
cgmath = "0.18"
env_logger = "0.10"
image = { version = "0.24", features = ["png", "jpeg"] }
log = "0.4"
pollster = "0.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tobj = { version = "3.2.1", features = ["async"] }
wgpu = "0.18.0"
winit = "0.28"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
